# revolucao-cibernetica

./: .gitignore  .pre-commit-config.yaml  ATUALIZACAO_INDEX.md  ATUALIZACAO_READMES.md  ATUALIZACAO_RESUMO.md  CNAME  README.md  download.html  entry.html  index.html  manifesto.html  sitemap.xml  task.md
.github/workflows/: gh-pages.yml
assets/: style_guide.md
assets/css/: download.css  index-ternary.css  loading-overlay.css  manifesto-evolved.css  styles.css
assets/images/: README.md
assets/scripts/: captcha.js  index-mobius.js  loading-overlay.js  main.js  manifesto-background.js  manifesto-mobius.js  mobius-debug-helper.js  mobius-rizoma-bridge.js  position-indicator.js  rizoma-navigation.js  sw-register.js  ternary-navigation.js  tres-loops.js
docs/: CHANGELOG_CAP1_MELHORIAS.md  CLEAN_CHAPTER_GUIDE.md  RIZOMA_SUMMARY_ASCII.txt  RIZOMA_UPDATE_CAP1.md  exemplo_uso_jsonl.py  exemplo_uso_xml.py  revolucao_cibernetica.jsonl  revolucao_cibernetica.min.xml  revolucao_cibernetica.xml  rizoma-edges.csv  rizoma-nodes.csv  rizoma-revolucao-cibernetica.graphml  rizoma-revolucao-cibernetica.json  rizoma-revolucao-cibernetica.md
nhandereko/: README.md  main.py  pyproject.toml  requirements.txt
nhandereko/data/db/: orquestrador.db
nhandereko/data/embeddings/: chroma.sqlite3
nhandereko/docs/: ARQUITETURA.md  EXEMPLOS.md  GERENCIAMENTO_SERVIDOR.md  INFORMACAO_COMO_LIGA.md  LOOP3_MANIFESTO_PRAXIS.md  MELHORIAS_PROPOSTAS.md  METRICAS.md  TRES_LOOPS.md
nhandereko/scripts/: init-db.py  install.sh  setup-spark.sh  start-server.sh  status-server.sh  stop-server.sh
nhandereko/server/: config.py  database.py  embeddings.py  graph.py  main.py  sintese_expansao.py
nhandereko/tests/: test_health.py
scripts/: README.md  export_file.py  pyproject.toml  pyrightconfig.json  requirements.txt
scripts/docs/: revolucao_cibernetica.epub
scripts/precommit/: update_generated.py
