[project]
name = "revolucao-cibernetica-export"
description = "Script de exportação multi-formato para 'A Revolução Cibernética'"
authors = [
    {name = "O Besta Fera", email = "dev@silvanoneto.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC-BY-SA-4.0"}

dependencies = [
    "ebooklib",
    "beautifulsoup4",
    "xhtml2pdf",
    "lxml",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pylance",
    "pyright",
]

[project.scripts]
export-revolucao = "export_file:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

# Ignorar todos os warnings de tipo de bibliotecas externas
reportMissingTypeStubs = false
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportAttributeAccessIssue = "none"
reportMissingParameterType = "none"
reportArgumentType = "none"
reportUnusedImport = "none"

# Configuração relaxada para scripts
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"

[tool.hatch.build.targets.wheel]
packages = ["."]
